Сделал правки, но нужно будет рефакторить